--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+cloud.name=dqomgrsec
+cloud.secret=ImxkwDpmJnFV8hpd6TDNNTvvstw
+cloud.key=344559171668367
 
+#spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.jpa.show-sql=false
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
